ajout bas de page fixe

--- a/css/footer.less
+++ b/css/footer.less
@@ -4,6 +4,20 @@
 	position: absolute;
 	bottom: 0px;
 	left: 0px;
-	height: 100px;
+	height: 50px;
 	width: 100%;
 }	
+
+.social-icons {
+    margin: 5px;
+}
+
+.social-icon {    
+    color: hsla(0, 0, 100%, 0.5);
+    margin: 5px;
+}
+
+.social-icon:hover {    
+    color: hsl(0, 0, 100%);
+    margin: 5px;
+}
