--- a/css/icon.less
+++ b/css/icon.less
@@ -24,8 +24,12 @@
 .icon-email:before {
 	content: "\f003";
 }
+
 .icon-location:before {
 	content: "\f041";
+}
+.icon-facebook:before {
+	content: "\f09a";
 }
 .icon-calendar:before {
 	content: "\f133";
