--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,5 +1,9 @@
 	<div class="footer">
-		
+        
+        <div class="social-icons">
+            <span class="social-icon icon-email"></span>
+            <span class="social-icon icon-facebook"></span>
+        </div>
 	</div>
 </div>
 <script src="../../js/myApp.js"></script>
