--- a/css/footer.less
+++ b/css/footer.less
@@ -1,23 +1,51 @@
 .footer {
 	background-color: #333;
-	color: #fff;
+	color: hsl(0, 0%, 80%);
 	position: absolute;
 	bottom: 0px;
 	left: 0px;
-	height: 50px;
+	height: 130px; /* change to .articleDetail */
 	width: 100%;
+	padding: 10px;
+	font-size: .9em;
 }	
 
-.social-icons {
-    margin: 5px;
+.footerNav {
+	text-align: center;
 }
 
-.social-icon {    
-    color: hsla(0, 0, 100%, 0.5);
-    margin: 5px;
+.footerNav-items{
+	display: inline-block;
+	vertical-align: top;
+	margin-left: 20px;
 }
 
-.social-icon:hover {    
-    color: hsl(0, 0, 100%);
-    margin: 5px;
+.footerNav-accueil {
+	display: inline-block;
+	vertical-align: top;
+}
+
+.footerNav-item:hover {
+	color: hsl(0, 0%, 100%);
+}
+
+.footerNav-separator {
+	border-top: solid 1px hsl(0, 0%, 80%);
+	margin-top: 5px;
+	width: 18em;
+	display: block;
+	left: 0;
+	right: 0;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+.footerSocial {
+	margin-left: 10px;
+	margin-right: 10px;
+	padding-top: 5px;
+}
+
+.footerSocial-contact {
+	margin: 20px;
 }
