Ajout bas de page desktop

--- a/css/rwd.less
+++ b/css/rwd.less
@@ -1,3 +1,33 @@
+@media screen and (min-width: 510px) {
+    
+    .articleDetail {
+        padding-bottom: 135px !important; /* substract footer */
+    }
+    
+    .footer {
+	   height: 95px !important; /* change to .articleDetail */
+    }
+    
+    .footerNav {
+        display: flex;      
+        text-align: center;
+        width: 481px;
+        margin: 0 auto;
+    }
+ 
+    .footerNav-separator {
+       display: none !important;
+    }
+       
+    .footerSocial-facebook {
+        margin-left: 20px;
+    }
+       
+    .footerSocial-contact {
+        display: block;
+    }
+}
+
 @media screen and (min-width: 800px) {
 		
 	.nav {
@@ -75,5 +105,5 @@
 	
 	.axeFormation {
 		border: solid 1px @color-formation-dark;
-	}        	
+	}    
 }
