--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,17 +1,19 @@
     <div class="footer">
         <div class="footerNav">
-            <a class="footerNav-item footerNav-accueil" href="/pages/index"><div>Accueil</div></a>
             <div class="footerNav-items">
-                <a class="footerNav-item footerNav-prevention" href="/pages/prevention"><div>Prévention</div></a>
-                <a class="footerNav-item footerNav-recherche" href="/pages/recherche"><div>Recherche</div></a>
-                <a class="footerNav-item footerNav-formation" href="/pages/formation"><div>Formation</div></a>
+              <a class="footerNav-item footerNav-accueil" href="../../index.html"><div>Accueil</div></a>
             </div>
             <div class="footerNav-items">
-                <a class="footerNav-item footerNav-quiSommesNous" href="/pages/qui-sommes-nous"><div>Qui sommes nous ?</div></a>
-                <a class="footerNav-item footerNav-adhesion" href="/pages/adhesion"><div>Adhérer à l'association</div></a>
+                <a class="footerNav-item footerNav-prevention" href="../../prevention"><div>Prévention</div></a>
+                <a class="footerNav-item footerNav-recherche" href="../../recherche"><div>Recherche</div></a>
+                <a class="footerNav-item footerNav-formation" href="../../formation"><div>Formation</div></a>
+            </div>
+            <div class="footerNav-items">
+                <a class="footerNav-item footerNav-quiSommesNous" href="../../qui-sommes-nous"><div>Qui sommes nous ?</div></a>
+                <a class="footerNav-item footerNav-adhesion" href="../../adhesion"><div>Adhérer à l'association</div></a>
             </div>
             <span class="footerNav-separator"></span>
-            <div class="footerSocial">
+              <div class="footerNav-items">
                 <a href="https://www.facebook.com/pages/A-Propos-Association-de-Pr%C3%A9vention-et-de-Recherche-en-Orthophonie/165294163669628"><span class="footerSocial-facebook">facebook</span></a>
                 <span class="footerSocial-contact">contact.apropos@gmail.com</span>
             </div>
