--- a/css/footer.less
+++ b/css/footer.less
@@ -14,10 +14,17 @@
 	text-align: center;
 }
 
+
 .footerNav-items{
 	display: inline-block;
 	vertical-align: top;
 	margin-left: 20px;
+    text-align: left;
+}
+
+.footerNav-items:first-child,
+.footerNav-items:last-child {
+    margin-left: 0;
 }
 
 .footerNav-accueil {
@@ -38,14 +45,9 @@
 	right: 0;
 	margin-left: auto;
 	margin-right: auto;
-}
-
-.footerSocial {
-	margin-left: 10px;
-	margin-right: 10px;
-	padding-top: 5px;
+	padding-bottom: 5px;
 }
 
 .footerSocial-contact {
-	margin: 20px;
+    margin-left: 20px;
 }
