--- a/layouts/partials/article-resume.html
+++ b/layouts/partials/article-resume.html
@@ -1,7 +1,7 @@
 <div class="{{#isAxePrevention}}article-prevention{{/isAxePrevention}}{{#isAxeFormation}}article-formation{{/isAxeFormation}}{{#isAxeRecherche}}article-recherche{{/isAxeRecherche}} articleResume {{#isAxePrevention}}articleResume-prevention{{/isAxePrevention}}{{#isAxeFormation}}articleResume-formation{{/isAxeFormation}}{{#isAxeRecherche}}articleResume-recherche{{/isAxeRecherche}}">
     {{> articleInfo}}
     <div class="articleResume-contenu">
-        <p>{{&excerpt}}<span> ...</span></p>
+        {{&excerpt}}<span> ...</span>
         <a class="readMore" href="/{{path}}">Lire la suite</a>
     </div>
     <div class="clear"></div>
