--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -19,6 +19,7 @@
             </div>
         </div>
     </div>
+</div> <!-- balise de fin ".wrapper"" -->
     <script src="../../js/myApp.js"></script>
 </body>
 </html>
