--- a/layouts/prevention.html
+++ b/layouts/prevention.html
@@ -1,10 +1,11 @@
 {{> header}}
 <body id="js-prevention" class="prevention">
-{{> nav}}
-{{> axePrevention}}
-<div class="grid-2 grid-article">
-{{#each collections.prevention}}        
-    {{#isAxePrevention}}{{> articleResume}}{{/isAxePrevention}}
-{{/each}}
-</div>
-{{> footer}}
+<div class="wrapper">    
+    {{> nav}}
+    {{> axePrevention}}
+    <div class="grid-2 grid-article">
+    {{#each collections.prevention}}        
+        {{#isAxePrevention}}{{> articleResume}}{{/isAxePrevention}}
+    {{/each}}
+    </div>
+    {{> footer}}
