--- a/css/app.less
+++ b/css/app.less
@@ -68,12 +68,13 @@ a.readmore:hover{
     text-decoration: none;
 }
 
+.quiSommesNous-objectif a:hover::after,
 a.readMore:hover::after {
     content: '';
     width: 100%;
     position: absolute;
     left: 0;
-    bottom: 5px;
+    bottom: 4px;
     border-width: 0 0 1px;
     border-style: solid;
 }
