--- a/layouts/adhesion.html
+++ b/layouts/adhesion.html
@@ -1,20 +1,47 @@
----
-bulletin-adhesion-2015.pdf
----
-Pourquoi et comment adhérer ?
+{{> header}}
+<body id="" class="adhesion">
+    <div class="wrapper">
+        {{> nav}}
+        <div class="quiSommesNous-container1">
+            <div class="quiSommesNous-container2">
+                <div class="quiSommesNous-header">
+                    <div class="u-strong u-uppercase">A PROPOS</div>
+                    <div><span class="u-strong u-uppercase">a</span>ssociation de <span class="u-strong u-uppercase">p</span>révention et de <span class="u-strong u-uppercase">R</span>echerche en <span class="u-strong u-uppercase">O</span>rthophonie ...</div>
+                    <div><span class="u-strong u-uppercase">p</span>rogrammes <span class="u-strong u-uppercase">o</span>rthophoniques d'éducation à la <span class="u-strong u-uppercase">s</span>anté</div>
+                </div>
+            </div>
+            <div class="clear"></div>
+        </div>
+        <div class="adhesion-body">
 
-Vous aimez l’orthophonie et souhaitez que votre métier soit mieux connu du plus grand nombre ?
+            <h2>Pourquoi adhérer ?</h2>
 
-Adhérez pour simplement soutenir les projets, recevoir des informations régulières sur les activités de l’association !
+            <p class="adhesion-question">Vous aimez l’orthophonie et souhaitez que votre métier soit mieux connu du plus grand nombre ?</p>
 
-Vous souhaitez informer un large public sur l’existence de troubles de la communication, encore trop méconnus ou négligés ?
+            <p>Adhérez pour simplement soutenir les projets, recevoir des informations régulières sur les activités de l’association !</p>
 
-Vous constatez le besoin d’information, de sensibilisation d’un public particulier ?
+            <p class="adhesion-question">Vous souhaitez informer un large public sur l’existence de troubles de la communication, encore trop méconnus ou négligés ?</p>
 
-Vous êtes formateur ou souhaitez le devenir ?
+            <p class="adhesion-question">Vous constatez le besoin d’information, de sensibilisation d’un public particulier ?</p>
 
-Vous aimeriez contribuer à la recherche en orthophonie ?
+            <p class="adhesion-question">Vous êtes formateur ou souhaitez le devenir ?</p>
 
-Adhérez, pour participer activement à la vie de l’association, proposer des actions, trouver de l’aide dans leur mise en œuvre !
+            <p class="adhesion-question">Vous aimeriez contribuer à la recherche en orthophonie ?</p>
 
-A PROPOS est votre association, ouverte à toutes les idées et à tous les orthophonistes sans exception.
+            <p>Adhérez, pour participer activement à la vie de l’association, proposer des actions, trouver de l’aide dans leur mise en œuvre !</p>
+
+            <p>A PROPOS est votre association, ouverte à toutes les idées et à tous les orthophonistes sans exception.</p>
+            
+            <a class="adhesion-argument" href="">argument N°1</a>
+            <a class="adhesion-argument" href="">argument N°1</a>
+            <a class="adhesion-argument" href="">argument N°1</a>
+
+            <h2>Comment adhérer</h2>
+
+            <p>Remplir l'inscription ci-dessous</p>
+            
+            <a href="/adhesion/bulletin-adhesion-2015.pdf">
+                <button class="btn-adhesion" >Télécharger l'inscription</button>
+            </a>
+        </div>
+        {{> footer}}
