--- a/layouts/partials/article-resume.html
+++ b/layouts/partials/article-resume.html
@@ -2,7 +2,7 @@
     {{> articleInfo}}
     <div class="articleResume-contenu">
         {{&excerpt}}<span> ...</span>
-        <a class="readMore" href="/{{path}}">Lire la suite</a>
+        <a class="readMore u-floatRight" href="/{{path}}">Lire la suite</a>
     </div>
     <div class="clear"></div>
 </div>
