--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -5,8 +5,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>{{this.titre}}</title>
         <!-- build:css ../../src/css/combined.css -->
+        
         <link rel="stylesheet" href="../../vendor/normalize.css" media="screen">
         <link rel="stylesheet" href="../../vendor/base.css" media="screen">
+        <link rel="stylesheet" href="../../node_modules/suitcss-utils-layout/lib/layout.css">
         <link rel="stylesheet" href="../../css/couleur.less">
         <link rel="stylesheet" href="../../css/font.less">
         <link rel="stylesheet" href="../../css/icon.less">
@@ -24,6 +26,7 @@
         <link rel="stylesheet" href="../../css/footer.less">
         <link rel="stylesheet" href="../../css/utilities.less">
         <link rel="stylesheet" href="../../css/inscription-et-tarif.less">
+        <link rel="stylesheet" href="../../css/adhesion.less">
         <link rel="stylesheet" href="../../css/print.css">
         <!-- endbuild -->
     </head>    
