--- a/layouts/qui-sommes-nous.html
+++ b/layouts/qui-sommes-nous.html
@@ -3,10 +3,6 @@
 <div class="wrapper">
     {{> nav}}
     <div class="quiSommesNous-container1">
-<<<<<<< HEAD
-        <!--<a class="quiSommesNous-logo-apropos" href="/pages/index"><div>&nbsp;</div></a>-->
-=======
->>>>>>> 920c57de83e79cadd2023aba5d3acbdccfec2485
         <div class="quiSommesNous-container2">
             <div class="quiSommesNous-header">
                 <div class="u-strong u-uppercase">A PROPOS</div>
@@ -22,95 +18,73 @@
         </p>
         <p>Nombre d’entre nous sont ou seront sollicités pour réaliser des actions, des missions de prévention sur le terrain.</p>
         <p>A Propos, <span class="u-strong">ouvert à tous les orthophonistes</span>, constitue un point d’appui institutionnel et logistique pour mener à bien ces actions.</p>
-        <p>Les objectifs d'A PROPOS couvrent les 3 axes suivants: 
-            <ul>
-<<<<<<< HEAD
-                <li><a class="" href="/prevention">Prévention</a></li>
-                <li><a class="" href="/recherche">Recherche</a></li>
-                <li><a class="" href="/formation">Formation</a></li>
-            </ul>
-        </p>
-        <div class="clear"></div>
-        <div style="text-align:center;">
+        <h2>Les objectifs</h2>
+            Ils couvrent les 3 axes suivants:
+            <p> 
+                <ul>
+                    <li class="quiSommesNous-objectif">
+                        <a class="quiSommesNous-objectif--titre" href="/prevention">Prévention</a>
+                        <div class="quiSommesNous-objectif--description">faciliter la mise en œuvre de la prévention des pathologies du langage et de la communication ...</div>
+                    </li>
+                    <li class="quiSommesNous-objectif">
+                        <a class="quiSommesNous-objectif--titre" href="/recherche">Recherche</a>
+                        <div class="quiSommesNous-objectif--description">Aider les orthophonistes à élaborer ou à collaborer à des projets de recherche et favoriser la publication de nouveaux résultats avec le concours de chercheurs universitaires</div>
+                    </li>
+                    <li class="quiSommesNous-objectif">
+                        <a class="quiSommesNous-objectif--titre" href="/formation">Formation</a>
+                        <div class="quiSommesNous-objectif--description">Proposer des formations professionnelles en tant qu’organisme de formation</div>
+                    </li>
+                </ul>
+            </p>
+        
+        <a href="/adhesion">
             <button class="btn-adhesion">Adhérer à l'association</button>
-        </div>
-=======
-                <li><a class="readMore" href="/prevention">Prévention</a></li>
-                <li><a class="readMore" href="/recherche">Recherche</a></li>
-                <li><a class="readMore" href="/formation">Formation</a></li>
-            </ul>
-        </p>
-        <button class="btn-adhesion">Adhérer à l'association</button>
-            
->>>>>>> 920c57de83e79cadd2023aba5d3acbdccfec2485
+        </a>
+
         <div class="MembreAssociation-list">
-            <h2 class="MembreAssociationList-titre">Les Membres de l'association</h2>
+            <h2 class="MembreAssociationList-titre">Les Membres du bureau</h2>
+            <h3 class="MembreAssociation-titre">Présidente</h3>
             <div class="MembreAssociation">
-                <h3 class="MembreAssociation-titre">Présidente</h3>
                 <span class="imageAvatar imageAvatar-01 imageAvatar-association"></span>
                 <div class="MembreAssociation-contenu">
                     <div class="MembreAssociation-nomComplet">{{presidente}}</div>
                     <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi distinctio et unde dolores, quibusdam nihil aliquid natus voluptates earum quos assumenda nobis pariatur placeat tempora. Repellendus, minus aut porro amet.</div>
                 </div>
-<<<<<<< HEAD
             </div>
+            <h3 class="MembreAssociation-titre">Secrétaire</h3>
             <div class="MembreAssociation">
-                <h3 class="MembreAssociation-titre">Secrétaire</h3>
-                <span class="imageAvatar imageAvatar-03 imageAvatar-association"></span>
-                <div class="MembreAssociation-contenu">
-                    <div class="MembreAssociation-nomComplet">{{secretaire}}</div>
-=======
-            </div>
-            <div class="MembreAssociation">
-                <h3 class="MembreAssociation-titre">Secrétaire</h3>
                 <span class="imageAvatar imageAvatar-03 imageAvatar-association"></span>
                 <div class="MembreAssociation-contenu">
                     <div class="MembreAssociation-nomComplet">{{secretaire}}</div>
                     <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi distinctio et unde dolores, quibusdam nihil aliquid natus voluptates earum quos assumenda nobis pariatur placeat tempora. Repellendus, minus aut porro amet.</div>
                 </div>
             </div>
+            <h3 class="MembreAssociation-titre">Secrétaire adjointe</h3>
             <div class="MembreAssociation">
-                <h3 class="MembreAssociation-titre">Secrétaire adjointe</h3>
                 <span class="imageAvatar imageAvatar-05 imageAvatar-association"></span>
                 <div class="MembreAssociation-contenu">
                     <div class="MembreAssociation-nomComplet">{{secretaire-adjointe}}</div>
->>>>>>> 920c57de83e79cadd2023aba5d3acbdccfec2485
                     <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi distinctio et unde dolores, quibusdam nihil aliquid natus voluptates earum quos assumenda nobis pariatur placeat tempora. Repellendus, minus aut porro amet.</div>
                 </div>
             </div>
+            <h3 class="MembreAssociation-titre">Secrétaire adjointe</h3>
             <div class="MembreAssociation">
-<<<<<<< HEAD
-                <h3 class="MembreAssociation-titre">Secrétaire adjointe</h3>
                 <span class="imageAvatar imageAvatar-05 imageAvatar-association"></span>
                 <div class="MembreAssociation-contenu">
                     <div class="MembreAssociation-nomComplet">{{secretaire-adjointe}}</div>
-=======
-                <h3 class="MembreAssociation-titre">Trésorière</h3>
-                <span class="imageAvatar imageAvatar-03 imageAvatar-association"></span>
-                <div class="MembreAssociation-contenu">
-                    <div class="MembreAssociation-nomComplet">{{tresoriere}}</div>
->>>>>>> 920c57de83e79cadd2023aba5d3acbdccfec2485
                     <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi distinctio et unde dolores, quibusdam nihil aliquid natus voluptates earum quos assumenda nobis pariatur placeat tempora. Repellendus, minus aut porro amet.</div>
                 </div>
             </div>
+            <h3 class="MembreAssociation-titre">Trésorière</h3>
             <div class="MembreAssociation">
-<<<<<<< HEAD
-                <h3 class="MembreAssociation-titre">Trésorière</h3>
                 <span class="imageAvatar imageAvatar-03 imageAvatar-association"></span>
                 <div class="MembreAssociation-contenu">
                     <div class="MembreAssociation-nomComplet">{{tresoriere}}</div>
-=======
-                <h3 class="MembreAssociation-titre">Membres du conseil d'administration</h3>
-                <span class="imageAvatar imageAvatar-06 imageAvatar-association"></span>
-                <div class="MembreAssociation-contenu">
-                    <div class="MembreAssociation-nomComplet">{{membre-conseil-administration-01}}</div>
->>>>>>> 920c57de83e79cadd2023aba5d3acbdccfec2485
                     <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi distinctio et unde dolores, quibusdam nihil aliquid natus voluptates earum quos assumenda nobis pariatur placeat tempora. Repellendus, minus aut porro amet.</div>
                 </div>
             </div>
+            <h3 class="MembreAssociation-titre">Membres du conseil d'administration</h3>
             <div class="MembreAssociation">
-<<<<<<< HEAD
-                <h3 class="MembreAssociation-titre">Membres du conseil d'administration</h3>
                 <span class="imageAvatar imageAvatar-06 imageAvatar-association"></span>
                 <div class="MembreAssociation-contenu">
                     <div class="MembreAssociation-nomComplet">{{membre-conseil-administration-01}}</div>
@@ -118,8 +92,6 @@
                 </div>
             </div>
             <div class="MembreAssociation">
-=======
->>>>>>> 920c57de83e79cadd2023aba5d3acbdccfec2485
                 <span class="imageAvatar imageAvatar-04 imageAvatar-association"></span>
                 <div class="MembreAssociation-contenu">
                     <div class="MembreAssociation-nomComplet">{{membre-conseil-administration-02}}</div>
