--- a/layouts/partials/inscription-tarif.html
+++ b/layouts/partials/inscription-tarif.html
@@ -17,21 +17,21 @@
     <h3>DPC</h3>
     <div class="articleDetail-inscription">la formation est gratuite et indemnisée<br>
     Inscrivez-vous sur le site <a href="https://www.mondpc.fr/">www.mondpc.fr</a><br>
-    N° de référence du programme : {{ogdpc-reference}}<br><a href="../../assets/{{../pdfRelativeDir}}/contrat-formation-dpc.pdf"><span class="icon-pdf"></span><span class="pdf-descriptionFichier">contrat de formation DPC</span></a>
+    N° de référence du programme : {{ogdpc-reference}}<br><a href="contrat-formation-dpc.pdf"><span class="icon-pdf"></span><span class="pdf-descriptionFichier">contrat de formation DPC</span></a>
     </div>
     {{/isDPC}}
     {{#isHorsDPC}}
     <h3>Hors DPC</h3>
     <div class="articleDetail-inscription">Tarif adhérent: {{tarif-adherent-liberal}} €<br> 
     Tarif non adhérent: {{tarif-non-adherent-liberal}} €<br>
-    <a href="../../assets/{{../pdfRelativeDir}}/contrat-formation-hors-dpc.pdf"><span class="icon-pdf"></span><span class="pdf-descriptionFichier">contrat de formation hors DPC</span></a>
+    <a href="contrat-formation-hors-dpc.pdf"><span class="icon-pdf"></span><span class="pdf-descriptionFichier">contrat de formation hors DPC</span></a>
     </div> 
     {{/isHorsDPC}}
     {{#isSalarie}}        
     <h3>Salarié</h3>
     <div class="articleDetail-inscription">Tarif adhérent: {{tarif-adherent-salarie}} €<br>
     Tarif non adhérent: {{tarif-non-adherent-salarie}} €<br>
-    <a href="../../assets/{{../pdfRelativeDir}}/contrat-formation-salarie.pdf"><span class="icon-pdf"></span><span class="pdf-descriptionFichier">contrat de formation salarié</span></a>
+    <a href="contrat-formation-salarie.pdf"><span class="icon-pdf"></span><span class="pdf-descriptionFichier">contrat de formation salarié</span></a>
     </div>
     {{/isSalarie}}
     
