--- a/css/rwd.less
+++ b/css/rwd.less
@@ -1,4 +1,17 @@
 @media screen and (min-width: 510px) {
+     
+    .body-header,
+    .axePrevention,
+    .axeRecherche,
+    .axeFormation{
+        padding: 10px 25px;
+    }
+     
+     .axePrevention-detail,
+     .axeRecherche-detail,
+     .axeFormation-detail {
+         display: block;
+     }
        
     .footer {
 	   height: 95px !important; /* change to .articleDetail */
@@ -25,7 +38,14 @@
 }
 
 @media screen and (min-width: 800px) {
-		
+	
+    .body-header,
+    .axePrevention,
+    .axeRecherche,
+    .axeFormation{
+        padding: 25px;
+    }
+    	
 	.nav {
 		text-align: center;
 		line-height: 3.5rem;
