--- a/css/nav.less
+++ b/css/nav.less
@@ -11,11 +11,11 @@
 // 	transition: top 500ms ease-in-out 0s	
 // }
 
-// .nav--hidden {
-// 	position: absolute;
-// 	width: 100%;	
-// 	top: -300px;
-// }
+.nav--hidden {
+	position: absolute;
+	width: 100%;	
+	top: -300px;
+}
 
 
 .nav-accueil {
