ajout menu responsive

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,25 +1,28 @@
-    <div class="footer">
-        <div class="footerNav">
-            <div class="footerNav-items">
-              <a class="footerNav-item footerNav-accueil" href="../../index.html"><div>Accueil</div></a>
+            <div class="footer">
+                <div class="footerNav">
+                    <div class="footerNav-items">
+                    <a class="footerNav-item footerNav-accueil" href="../../index.html"><div>Accueil</div></a>
+                    </div>
+                    <div class="footerNav-items">
+                        <a class="footerNav-item footerNav-prevention" href="../../prevention"><div>Prévention</div></a>
+                        <a class="footerNav-item footerNav-recherche" href="../../recherche"><div>Recherche</div></a>
+                        <a class="footerNav-item footerNav-formation" href="../../formation"><div>Formation</div></a>
+                    </div>
+                    <div class="footerNav-items">
+                        <a class="footerNav-item footerNav-quiSommesNous" href="../../qui-sommes-nous"><div>Qui sommes nous ?</div></a>
+                        <a class="footerNav-item footerNav-adhesion" href="../../adhesion"><div>Adhérer à l'association</div></a>
+                    </div>
+                    <span class="footerNav-separator"></span>
+                    <div class="footerNav-items">
+                        <a href="https://www.facebook.com/pages/A-Propos-Association-de-Pr%C3%A9vention-et-de-Recherche-en-Orthophonie/165294163669628"><span class="footerSocial-facebook">facebook</span></a>
+                        <span class="footerSocial-contact">contact.apropos@gmail.com</span>
+                    </div>
+                </div>
             </div>
-            <div class="footerNav-items">
-                <a class="footerNav-item footerNav-prevention" href="../../prevention"><div>Prévention</div></a>
-                <a class="footerNav-item footerNav-recherche" href="../../recherche"><div>Recherche</div></a>
-                <a class="footerNav-item footerNav-formation" href="../../formation"><div>Formation</div></a>
-            </div>
-            <div class="footerNav-items">
-                <a class="footerNav-item footerNav-quiSommesNous" href="../../qui-sommes-nous"><div>Qui sommes nous ?</div></a>
-                <a class="footerNav-item footerNav-adhesion" href="../../adhesion"><div>Adhérer à l'association</div></a>
-            </div>
-            <span class="footerNav-separator"></span>
-              <div class="footerNav-items">
-                <a href="https://www.facebook.com/pages/A-Propos-Association-de-Pr%C3%A9vention-et-de-Recherche-en-Orthophonie/165294163669628"><span class="footerSocial-facebook">facebook</span></a>
-                <span class="footerSocial-contact">contact.apropos@gmail.com</span>
-            </div>
-        </div>
-    </div>
-</div> <!-- balise de fin ".wrapper"" -->
+        <div class="site-cache"></div>
+    </div> <!-- balise de fin ".pusher" -->
+</div> <!-- balise de fin ".wrapper" -->
     <script src="../../js/myApp.js"></script>
+    <script src="../../js/nav.js"></script>
 </body>
 </html>
