--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -1,4 +1,4 @@
-        <div class="navIcon-container">
+        <!--<div class="navIcon-container">
             <div class="navIcon">
                 <span></span>
                 
@@ -10,6 +10,17 @@
             <a class="nav-item nav-recherche" href="/pages/recherche"><div>Recherche</div></a>
             <a class="nav-item nav-formation" href="/pages/formation"><div>Formation</div></a>
             <a class="nav-item nav-quiSommesNous" href="/pages/qui-sommes-nous"><div>Qui sommes nous ?</div></a>
-        </div> 
-    <script src="nav.js"></script>
-</html>
+        </div> -->
+        <div class="pusher">
+            <header class="header">
+                <a href="#" class="header__icon"></a>
+                <a href="#" class="header__logo">Logo</a>
+                <nav class="menu">
+                    <a href="#">Accueil</a>
+                    <a href="#">Prévention</a>
+                    <a href="#">Recherche</a>
+                    <a href="#">Formation</a>
+                    <a href="#">Qui sommes nous ?</a>
+                </nav>
+            </header>        
+            
