fusion des 2 menus

--- a/css/nav.less
+++ b/css/nav.less
@@ -1,4 +1,4 @@
-/*.nav {
+.nav {
 	background-color: white;
 	border-bottom: solid 1px @color-article-border;
 	line-height: 2.5rem;
@@ -71,8 +71,9 @@
     position: absolute;
     margin-left: 25px;
 }
-*/
+
 /* -------------------------------------------------- */
+/*
 html, body {
     font-family: verdana;
     font-size: 16px;
@@ -99,7 +100,6 @@ a {
 }
 
 .header{
-    /*position: fixed;*/
     left: 0;
     right: 0;
     height: 66px;
@@ -122,20 +122,17 @@ a {
     bottom: 0;
     padding-top: 0;
     overflow-y: scroll;
-    -webkit-overflow-scrolling: touch; /* safari */
+    -webkit-overflow-scrolling: touch;
 }
 
 .menu {
-    /*float: left;*/
     position: absolute;
     left: 0;
     top: 0;
     bottom: 0;
     width: 180px;
     background-color: hsl(177, 70%, 36%);
-    /*display: none;*/    
     transform: translateX(-180px);
-    /*transition-duration: .3s;*/
 }
 
 .width-sidebar .pusher {
@@ -156,7 +153,6 @@ a {
     display: block;
     height: 40px;
     line-height: 40px;
-    /*text-align: center;*/
     border-bottom: 1px solid hsl(177, 70%, 41%);
 }
 
@@ -165,7 +161,6 @@ a {
 }
 
 .container {
-    /*clear: both;*/
     margin: 0 10px;
 }
 
@@ -175,7 +170,6 @@ a {
     float: left;
     width: 51px;
     height: 66px;
-    /*background-color: hsla(0, 0%, 100%, .5);*/
     
     cursor: pointer;
 }
@@ -194,7 +188,7 @@ a {
 @media only screen and (min-width: 515px) {
  
     .header{
-        /*position: fixed;*/
+        position: fixed;
     }
 
     .site-content {
@@ -214,3 +208,4 @@ a {
         border-bottom: none;
     }   
 }
+*/
