--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -1,26 +1,25 @@
-        <!--<div class="navIcon-container">
+<div class="pusher">
+    <header class="header">
+        <a href="#" class="header__icon"></a>
+        <a href="#" class="header__logo">Logo</a>
+        <nav class="menu">
+            <a href="#">Accueil</a>
+            <a href="#">Prévention</a>
+            <a href="#">Recherche</a>
+            <a href="#">Formation</a>
+            <a href="#">Qui sommes nous ?</a>
+        </nav>
+        <div class="navIcon-container">
             <div class="navIcon">
                 <span></span>
-                
+
             </div>
         </div>
-        <div class="nav nav--hidden">
+        <div class="nav">
             <a class="nav-item nav-accueil" href="/pages/index"><div>Accueil</div></a>
             <a class="nav-item nav-prevention" href="/pages/prevention"><div>Prévention</div></a>
             <a class="nav-item nav-recherche" href="/pages/recherche"><div>Recherche</div></a>
             <a class="nav-item nav-formation" href="/pages/formation"><div>Formation</div></a>
             <a class="nav-item nav-quiSommesNous" href="/pages/qui-sommes-nous"><div>Qui sommes nous ?</div></a>
-        </div> -->
-        <div class="pusher">
-            <header class="header">
-                <a href="#" class="header__icon"></a>
-                <a href="#" class="header__logo">Logo</a>
-                <nav class="menu">
-                    <a href="#">Accueil</a>
-                    <a href="#">Prévention</a>
-                    <a href="#">Recherche</a>
-                    <a href="#">Formation</a>
-                    <a href="#">Qui sommes nous ?</a>
-                </nav>
-            </header>        
-            
+        </div>
+    </header>
