--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -1,7 +1,9 @@
 <div class="pusher">
     <header class="header">
-        <a href="#" class="header__icon"></a>
-        <a href="#" class="header__logo">MENU</a>
+        <div class="u-floatRight">
+            <a href="#" class="header__icon"></a>
+            <a href="#" class="header__logo">MENU</a>
+        </div>
         <nav class="menu nav">
             <a class="nav-item nav-accueil" href="/pages/index"><div>Accueil</div></a>
             <a class="nav-item nav-prevention" href="/pages/prevention"><div>Prévention</div></a>
