--- a/css/nav.less
+++ b/css/nav.less
@@ -99,14 +99,34 @@
 .header{
     left: 0;
     right: 0;
-    height: 66px;
-    line-height: 66px;
+    height: 3.5rem;
+    // line-height: 66px;
     background-color: #FFF;
 }
 
+.header__icon {
+    position: relative;
+    display: block;
+    width: 54px;
+    height: 34px;
+    background-color: hsla(0, 0%, 100%, .5);
+    cursor: pointer;
+}
+
+.header__icon::after {
+    content: '';
+    position: absolute;
+    // display: block;
+    width: 1.4rem;
+    height: 0;
+    top: 15px;
+    right: 23px;
+    box-shadow: 0 0 0 1px #000, 0 7px 0 1px #000, 0 14px 0 1px #000;
+}
+
 .header__logo {
-    padding-right: 25px;
-    float: left;
+    color: #000;
+    top: -3px;
 }
 
 .site-content {
@@ -158,51 +178,4 @@
 .container {
     /*clear: both;*/
     margin: 0 10px;
-}
-
-.header__icon {
-    position: relative;
-    display: block;
-    float: left;
-    width: 51px;
-    height: 66px;
-    /*background-color: hsla(0, 0%, 100%, .5);*/
-    
-    cursor: pointer;
-}
-
-.header__icon::after {
-    content: '';
-    position: absolute;
-    display: block;
-    width: 1.4rem;
-    height: 0;
-    top: 26px;
-    left: 15px;
-    box-shadow: 0 0 0 1px #000, 0 7px 0 1px #000, 0 14px 0 1px #000;
-}
-
-@media only screen and (min-width: 515px) {
- 
-    .header__icon,
-    .header__logo {
-        display: none;
-    }
-
-    .site-content {
-        padding-top: 66px;
-    }
-    
-    .menu {
-        position: static;
-        transform: none;
-        width: auto;  
-        background-color: inherit; 
-        transition-duration: initial;    
-    }
-    
-    // .menu a {
-    //     display: inline-block;
-    //     border-bottom: none;
-    // }   
 }
