--- a/css/nav.less
+++ b/css/nav.less
@@ -12,8 +12,12 @@
 }
 
 
-.nav-accueil {
-    margin-left: 100px;
+// .nav-accueil {
+//     margin-left: 100px;
+// }
+
+.nav-logo {
+    position: relative;
 }
 
 .nav-accueil,
