ajout logo dans l'en-tete

--- a/css/logo.less
+++ b/css/logo.less
@@ -1,6 +1,21 @@
+.logo-container {
+    position: relative;
+    left: 180px;
+}
+
 .logo {
-    width: 56px;
-    height: 56px;
+    position: absolute;
+    height: 40px;    
+    margin-left: 10px;
+    margin-top: 10px;
+}
+
+.logo-texte {
+    position: absolute;
+    margin-left: 55px;
+    line-height: 3.5rem;
+    height: 9px;
+    fill: @color-bodyHeader;
 }
 
 .logo-prevention {
@@ -13,8 +28,4 @@
 
 .logo-formation {
     fill: @color-formation;    
-}
-
-.logo-texte {
-    fill: @color-bodyHeader;
 }
