--- a/css/qui-sommes-nous.less
+++ b/css/qui-sommes-nous.less
@@ -7,22 +7,11 @@ body.quiSommesNous {
     margin-bottom: 1.5em;
 }
 
-.quiSommesNous-container1 {  
-    padding: 20px;
+.quiSommesNous-header {
+    padding: 10px;
     background-color: #aaa;
     color: white;
-}
-
-.quiSommesNous-container2 {
-    float: left;
-    position: relative;
-    left: 50%;
-}
-
-.quiSommesNous-header {
-    float: left;
-    position: relative;
-    left: -50%;	
+    margin: 0 auto;
 }
 
 .adhesion-body,
