--- a/css/rwd.less
+++ b/css/rwd.less
@@ -1,5 +1,5 @@
 @media only screen and (min-width: 510px) {
-
+          
     .site-content {
         padding-top: 66px;
     }
@@ -48,6 +48,18 @@
 }
 
 @media screen and (min-width: 800px) {
+
+    .logo-container {
+        left: auto;
+    }
+    
+    .logo {
+        margin-left: 20px;
+    }
+    
+    .logo-texte {
+        margin-left: 65px;
+    }
 
     .header__icon,
     .header__logo {
