--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -4,8 +4,16 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>{{this.titre}}</title>
-        <!-- build:css ../../src/css/combined.css -->
         
+        <!-- For FF, Chrome et Opera -->
+        <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32" />
+        <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16" />
+        
+        <!-- for IE -->
+        <link rel="icon" type="image/x-icon" href="favicon.ico" >
+        <link rel="shortcut icon" type="image/x-icon" href="favicon.ico"/>
+
+        <!-- build:css ../../src/css/combined.css -->        
         <link rel="stylesheet" href="../../vendor/normalize.css" media="screen">
         <link rel="stylesheet" href="../../vendor/base.css" media="screen">
         <link rel="stylesheet" href="../../node_modules/suitcss-utils-layout/lib/layout.css">
