Gestion des axes en responsive

--- a/css/axe.less
+++ b/css/axe.less
@@ -2,11 +2,13 @@ axe{
     position:relative;
 }
 
-.axePrevention,
-.axeRecherche,
-.axeFormation {
-    position: relative;
-}
+// .axePrevention,
+// .axeRecherche,
+// .axeFormation {
+//     position: relative;
+//     padding: 10px 25px;
+
+// }
 
 .axePrevention {
     background-color: @color-prevention;
@@ -28,19 +30,19 @@ axe{
     border-bottom: solid 1px @color-bodyHeader-dark;
 }
 
-.prevention .axePrevention,
-.recherche .axeRecherche,
-.formation .axeFormation {
-    padding-bottom: 5px;    
-}
+// .prevention .axePrevention,
+// .recherche .axeRecherche,
+// .formation .axeFormation {
+//     padding-bottom: 5px;    
+// }
 
 .body-header,
 .axePrevention,
 .axeRecherche,
 .axeFormation{
     color: white;
-    padding: 0 25px;
-    vertical-align: top;
+    padding: 10px 25px;
+    // vertical-align: top;
     cursor: pointer;
 }
 
