--- a/css/qui-sommes-nous.less
+++ b/css/qui-sommes-nous.less
@@ -7,9 +7,12 @@ body.quiSommesNous {
     margin-bottom: 1.5em;
 }
 
+.quiSommesNous-header-container {
+    background-color: #aaa;
+}
+
 .quiSommesNous-header {
     padding: 10px;
-    background-color: #aaa;
     color: white;
     margin: 0 auto;
 }
@@ -130,4 +133,11 @@ body.quiSommesNous {
     background: url(../assets/images/logo-apropos-112.png) no-repeat;
     position: absolute;
     margin-left: 25px;
+}
+
+@media only screen and (min-width: 480px){
+    
+    .quiSommesNous-header {   
+        width: 480px;
+    }
 }
