--- a/css/rwd.less
+++ b/css/rwd.less
@@ -4,10 +4,11 @@
         padding-top: 66px;
     }
         
-    .body-header,
-    .axePrevention,
-    .axeRecherche,
-    .axeFormation{
+    .body-header//,
+    // .axePrevention,
+    // .axeRecherche,
+    // .axeFormation
+    {
         padding: 10px 25px;
     }
      
