--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -36,6 +36,7 @@
         <link rel="stylesheet" href="../../css/utilities.less">
         <link rel="stylesheet" href="../../css/inscription-et-tarif.less">
         <link rel="stylesheet" href="../../css/adhesion.less">
+        <link rel="stylesheet" href="../../css/post.html">
         <link rel="stylesheet" href="../../css/print.css">
         <!-- endbuild -->
     </head>    
