--- a/layouts/qui-sommes-nous.html
+++ b/layouts/qui-sommes-nous.html
@@ -2,10 +2,12 @@
 <body id="js-quiSommesNous" class="quiSommesNous">
 <div class="wrapper">
     {{> nav}}
-    <div class="quiSommesNous-header">
-        <div class="u-strong u-uppercase">A PROPOS</div>
-        <div><span class="u-strong u-uppercase">a</span>ssociation de <span class="u-strong u-uppercase">p</span>révention et de <span  class="u-strong u-uppercase">R</span>echerche en <span  class="u-strong u-uppercase">O</span>rthophonie ...</div>
-        <div><span class="u-strong u-uppercase">p</span>rogrammes <span class="u-strong u-uppercase">o</span>rthophoniques d'éducation à la <span  class="u-strong u-uppercase">s</span>anté</div>    
+    <div class="quiSommesNous-header-container">
+        <div class="quiSommesNous-header">
+            <div class="u-strong u-uppercase">A PROPOS</div>
+            <div><span class="u-strong u-uppercase">a</span>ssociation de <span class="u-strong u-uppercase">p</span>révention et de <span  class="u-strong u-uppercase">R</span>echerche en <span  class="u-strong u-uppercase">O</span>rthophonie ...</div>
+            <div><span class="u-strong u-uppercase">p</span>rogrammes <span class="u-strong u-uppercase">o</span>rthophoniques d'éducation à la <span  class="u-strong u-uppercase">s</span>anté</div>    
+        </div>
     </div>
     <div class="clear"></div>
     <div class="quiSommesNous-body">
